25.8 (ws)
      - added patches from Olav Gundersen (lilypond export, more grace note types)
22.8 (ws)
      - export unrecognized harmony as text "direction" in MusicXML
18.8 (ws)
      - fixed handling of filenames with dots like "a.b.c.mops.xml"
      - add new command Shift+K to popup harmony properties of selected note/chord
16.8 (db)
      - fixed beaming for the most common compound time signatures
14.8 (ws)
      - fixed Ctrl+V (paste) shortcut for text edit mode in windows
13.8 (ws)
      - fixed transposing key signatures
      - fixed image drag&drop for windows version
      - fixed "AltGr" key in windows version
12.8 (db)
      - Fixed beaming for the most common simple time signatures
      (ws)
      - put dot after a note always in the space above a note if note is on
        a line (tracker item 2012110)
11.8. (ws)
      - implemented Ctrl+V (paste) shortcut for text edit mode
8.8 (ws)
      - added "All Supported files" as default for "Open File Dialog" ass suggested by
        Lasconic
      - fixed enable/disable undo/redo buttons; mscore crashed when a wrong enabled
        button was pressed
7.8 (ws)
      - added first version of spanish translation from Carlos Sanchiavedraz
6.8 (ws)
      - do not transpose key signatures when creating score from template
      - upate "concert pitch" button state after undo/redo
5.8 (ws)
      - MusicXML import of dottet rests
4.8 (ws)
      - fixed regression in MusicXML export of rests (change from 23.7.)
1.8  (ws)
      - fix crash in new score wizard
30.7 (ws)
      - new "display in concert pitch" button
      - fix for build script (if-endif mismatch)
      - fix loading of plugins
29.7 (ws)
      - updated italian translation from Angelo Contardi
23.7 (ws)
      - change notion of MusicXML "whole measure rest"
      - harmony fixes: bass note entry & export/import to MusicXML
      - new score meta data dialog
      - support for MusicXML identity/source element
21.7 (ws)